--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.28.0",
+    "react-router-dom": "^7.1.3",
     "recharts": "^2.13.3",
     "sort-by": "^1.2.0"
   },
